force-app/main/default/objects/Cita_Medica__c/Cita_Medica__c.object-meta.xml
<CustomObject>
    <description>Vanguard</description>
    <label>Cita Medica</label>
    <nameField>
        <displayFormat>CM-{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>Cita</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Citas Medicas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>