force-app/main/default/objects/Cita_Medica__c/fields/Centro__c.field-meta.xml
<CustomField>
    <fullName>Centro__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centro</label>
    <referenceTo>Centro__c</referenceTo>
    <relationshipLabel>Citas Medicas</relationshipLabel>
    <relationshipName>Citas_Medicas</relationshipName>
    <type>Lookup</type>
</CustomField>