force-app/main/default/objects/Cita_Medica__c/fields/Especialidad__c.field-meta.xml
<CustomField>
    <fullName>Especialidad__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Especialidad</label>
    <referenceTo>Especialidad__c</referenceTo>
    <relationshipLabel>Citas Medicas</relationshipLabel>
    <relationshipName>Citas_Medicas</relationshipName>
    <type>Lookup</type>
</CustomField>