force-app/main/default/objects/Cita_Medica__c/fields/Hueco__c.field-meta.xml
<CustomField>
    <fullName>Hueco__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hueco</label>
    <referenceTo>Hueco__c</referenceTo>
    <relationshipLabel>Citas Medicas</relationshipLabel>
    <relationshipName>Citas_Medicas</relationshipName>
    <type>Lookup</type>
</CustomField>