force-app/main/default/objects/Cita_Medica__c/fields/Nombre_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Cliente__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nombre de Cliente</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Citas Medicas</relationshipLabel>
    <relationshipName>Citas_Medicas1</relationshipName>
    <type>Lookup</type>
</CustomField>